--- a/templates/project/_grid.scss
+++ b/templates/project/_grid.scss
@@ -43,6 +43,7 @@
 // @include col(3, 2);              // shifted 2 columns to right
 // @include col(3, 2, 20px);        // subtract 20px from `width` to adjust for borders/padding
 // @include col-gutterless(5, 2);   // "gutterless" element, identical usage to `col()`
+// @include col-widthless;          // adds float and gutters only (useful for aligning headers, etc.)
 //
 // @include grid-classes;           // generate .g* classes to use in markup
 // @include grid-classes(true);     // generate .g* and .gl* (gutterless) classes
