--- a/stylesheets/_lucid.scss
+++ b/stylesheets/_lucid.scss
@@ -2,26 +2,28 @@
 //
 // THE LUCID GRID | SETUP
 // plugin by Yifei Zhang [http://yifei.co]
+// MIT License [https://github.com/ezYZ/lucid/blob/master/LICENSE.txt]
 // 
 //============================================================================//
 
 // Grid configuration 
-$grid-width: 960px !default;
+$grid-width: 990px !default;
 $grid-columns: 12 !default;
 $grid-gutter: 15px !default;
-$grid-outer-gutter: 30px !default;
+$grid-outer-gutter: 15px !default;
 
-// @extend hook class names
-$grid-hook-container: ".lucid-grid" !default;
-$grid-hook-row: ".lucid-row" !default;
-$grid-hook-column: ".lucid-column" !default;
-$grid-hook-gutterless: ".lucid-gutterless" !default;
-
-// Use "pie-clearfix" clearfix or "overflow" clearfix?
+// Use "pie-clearfix", "overflow", or "none"?
 $grid-clearfix: "pie-clearfix" !default;
 
 // Center rows by default?
 $grid-centering: true !default;
+
+// @extend hook selectors
+$grid-hook-clearfix: ".grid-clearfix" !default;
+$grid-hook-container: ".grid-container" !default;
+$grid-hook-element: ".grid-element" !default;
+$grid-hook-gutterless: ".grid-column-gutterless" !default;
+
 
 //
 // Imports
