--- a/templates/project/_grid.scss
+++ b/templates/project/_grid.scss
@@ -5,6 +5,7 @@
 // MIT License [https://github.com/ezYZ/lucid/blob/master/LICENSE.txt]
 //
 // @import this into your project or paste into your base/bootstrap file 
+// The variables included below are the defaults and are safe to remove.
 //
 //============================================================================//
 
